optimizedLaunch should be in AbstractRunMojo